Added a parameter to ViewportCanvas to make it possible to not reset the camera when setting model Cleaned BetterSelector